# tern

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
core/: Cargo.toml
core/migrations/: 20241126135728_infrastructure.sql
core/src/: controller.rs  converter.rs  database.rs  interface.rs  lib.rs  main.rs
gui/: Cargo.toml  build.rs
gui/src/: interface.rs  main.rs
gui/ui/: app-window.slint
migrations/: 20241126135728_infrastructure.sql
src/: config.rs  controller.rs  converter.rs  database.rs  interface.rs  main.rs  utils.rs
ui/: app-window.slint  backend.slint
ui/components/: left-panel.slint  list-item.slint  right-panel.slint  tile.slint
